2010-01-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* Banshee.AlarmClock.sln, Banshee.AlarmClock.csproj: Update
	  sln and csproj files.

2008-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.4.3 released. 

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* BUGS, README: Small updates

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* Banshee.AlarmClock.csproj: Still embed the .addin.xml as a
	  resource.

	* configure.ac: Bump version to 0.4.3

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* configure.ac, src/Banshee.AlarmClock.addin.xml,
	  src/Banshee.AlarmClock.addin.xml.in: Have configure
	  automatically put the version number in the .addin.xml.

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* COPYING, src/Alarm.cs, src/VolumeFade.cs,
	  src/AlarmConfigDialog.cs, src/AlarmClockService.cs,
	  src/ConfigurationSchema.cs, src/ConfigurationDialog.cs,
	  src/SleepTimerConfigDialog.cs: Add copyright headers to all
	  source files and update copyright information.

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* configure.ac: Rename configure option to --user-extension

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* build/m4/shamrock/mono.m4: Fix typo

2009-05-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>

	* alarm.mdp, alarm.mds, Banshee.AlarmClock.sln,
	  Banshee.AlarmClock.csproj: Convert solution and project
	  files to the VisualStudio format. it's now the default for
	  MonoDevelop 2.0.

2009-01-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* configure.ac: Remove useless macro.

2008-11-25  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* build/m4/shamrock/programs.m4: Do actually bail if a program is not
	  found.

2008-11-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.4.2 released. 

2008-11-08  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Alarm.cs: Do not start playing if the alarm is not enabled.