@@ -1,5 +1,12 @@
 2010-01-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>
 
+	* src/Alarm.cs, src/VolumeFade.cs, src/AlarmConfigDialog.cs,
+	  src/AlarmClockService.cs, src/ConfigurationSchema.cs,
+	  src/ConfigurationDialog.cs, src/SleepTimerConfigDialog.cs:
+	  Minor code refactoring and cleanup.
+
+2010-01-30  Bertrand Lorentz <bertrand.lorentz@gmail.com>
+
 	* Banshee.AlarmClock.sln, Banshee.AlarmClock.csproj: Update
 	  sln and csproj files.
 
